### Added

- Added check of Experimental versions in mod log
- Added some more bugs to fix later

### Changes

- Items are now toggled before vehicles
- Rewritten vehicles toggling to more reliable method
- Rewritten items toggling, in order to prevent items falling through the vehicles

### Bug Fixes

- Fixed safe mode bug
- Attempt to fix items clipping through vehicles (again...)
- Fixed My Summer Car bug in which seats would detach themselves
- Some more bug fixes