@@ -1,7 +1,10 @@
+Note: Expect items to fall through vehicles, if you're using some kind of teleportation mod, or NoClip. There's nothing I can do about it.
+
 ### Added
 
 - Added check of Experimental versions in mod log
 - Added some more bugs to fix later
+- Wheels are now toggled
 
 ### Changes
 
@@ -11,7 +14,12 @@
 
 ### Bug Fixes
 
-- Fixed safe mode bug
 - Attempt to fix items clipping through vehicles (again...)
+- Attempt to fix Satsuma getting flipped (topless plz fix your shit)
+- Fixed safe mode bug
 - Fixed My Summer Car bug in which seats would detach themselves
-- Some more bug fixes
+- Fixed MOP crashing if some engine part has been removed from Satsuma
+- Fixed a bug which potentially would cause MOP to try to divide by 0
+- Fixed boat fuel level resetting after respawn
+- Satsuma deformation logic doesn't get reneabled by MOP
+- Minor bug fixes
